--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <p>Fill all informations</p>
       </header>
       <div class="steps">
-        <div class="step step-1 completed">
+        <div class="step step-1">
           <input
             class="input"
             type="text"
