commit massage goes here

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
           />
           <button class="btn" data-index="3">
             <span class="icon-locke"></span>
-            <span class="icon-correct"></span>
+            <span class="icon-arrow"></span>
           </button>
         </div>
       </div>
