--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/style.css" />
-    <title>Three Step Form</title>
+    <title>Three Steps Form</title>
   </head>
   <body>
     <main class="form">
@@ -17,7 +17,7 @@
         <div class="step step-1 active">
           <input
             class="input"
-            type="text"
+            type="email"
             placeholder="enter your email here"
           />
           <button class="btn" data-index="1">
