--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="step step-1 active">
           <input
             class="input"
-            type="email"
+            type="text"
             placeholder="enter your email here"
           />
           <button class="btn" data-index="1">
